# Oracon

./: .gitignore  CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  README.md  ROADMAP.md  STATUS.md  test.ora  test_arrays_maps.ora  test_basic_functions.ora  test_func_execution  test_func_execution.cpp  test_functions.ora  test_script_update.cpp  test_simple_update.ora  test_update_directly  test_update_directly.cpp  test_user_functions.ora
.claude/: settings.local.json
OraconAuto/: AI_NPC_INTEGRATION.md  ARCHITECTURE.md  CMakeLists.txt  README_CLAUDE.md
OraconAuto/examples/: CMakeLists.txt  basic_agent.cpp  claude_demo.cpp  coding_assistant.cpp
OraconAuto/include/oracon/auto/: agent.h  auto.h  llm_client.h  memory.h  prompt.h  tool.h  workflow.h
OraconAuto/src/: anthropic_client.cpp  http_client.h  http_client_curl.cpp  llm_client_impl.cpp  tools_impl.cpp
OraconCore/: CMakeLists.txt
OraconCore/include/oracon/core/: common.h  logger.h  memory.h  types.h
OraconCore/src/: common.cpp  logger.cpp  memory.cpp
OraconEngine/: CMakeLists.txt  VILLAGE_OF_ORACON.md  VISUAL_AI_NPC_DEMO.md
OraconEngine/examples/: CMakeLists.txt  ai_npc_demo.cpp  bouncing_ball.cpp  scripted_game.cpp  test_script_api.cpp  village_of_oracon.cpp  visual_ai_npcs.cpp
OraconEngine/include/oracon/engine/: ai_behavior.h  camera.h  component.h  engine.h  entity.h  game_loop.h  input.h  physics.h  scene.h  script.h  time.h  world.h
OraconEngine/src/core/: game_loop.cpp  time.cpp
OraconEngine/src/ecs/: entity.cpp  world.cpp
OraconEngine/src/input/: input.cpp
OraconEngine/src/physics/: collision.cpp
OraconEngine/src/scene/: camera.cpp  scene.cpp
OraconEngine/src/script/: script.cpp
OraconGfx/: CMakeLists.txt
OraconGfx/examples/: CMakeLists.txt  test_gfx.cpp
OraconGfx/include/oracon/gfx/: canvas.h  color.h  gfx.h  primitives.h  renderer.h  sprite.h  text.h  window.h
OraconGfx/src/renderer/: renderer.cpp
OraconIntegrate/: CMakeLists.txt  README.md
OraconIntegrate/include/oracon/integrate/: config.h
OraconIntegrate/include/oracon/integrate/desktop/: capture.h  encoder.h  stream.h
OraconIntegrate/include/oracon/integrate/filesystem/: transfer.h
OraconIntegrate/include/oracon/integrate/network/: client.h  connection.h  server.h  socket.h
OraconIntegrate/include/oracon/integrate/protocol/: handler.h  message.h
OraconIntegrate/include/oracon/integrate/terminal/: pty.h  shell.h
OraconIntegrate/platform/linux/: capture_linux.cpp  encoder_stubs.cpp  encoder_vaapi.cpp  pty_linux.cpp  service_linux.cpp
OraconIntegrate/platform/macos/: capture_macos.mm  encoder_videotoolbox.cpp  pty_macos.cpp  service_macos.cpp
OraconIntegrate/platform/windows/: capture_windows.cpp  pty_windows.cpp  service_windows.cpp
OraconIntegrate/resources/: oracon-integrate.conf.example
OraconIntegrate/scripts/: build-linux.sh  build-macos.sh  build-windows.bat
OraconIntegrate/src/: main_cli.cpp  main_gui.cpp  main_service.cpp
OraconIntegrate/src/desktop/: capture.cpp  encoder.cpp  stream.cpp
OraconIntegrate/src/filesystem/: transfer.cpp
OraconIntegrate/src/gui/: connection_widget.cpp  desktop_viewer.cpp  file_browser.cpp  mainwindow.cpp  settings_dialog.cpp  terminal_widget.cpp
OraconIntegrate/src/network/: client.cpp  connection.cpp  server.cpp  socket.cpp
OraconIntegrate/src/protocol/: handler.cpp  message.cpp
OraconIntegrate/src/terminal/: pty.cpp  shell.cpp
OraconLang/: CMakeLists.txt
OraconLang/include/oracon/lang/ast/: ast.h
OraconLang/include/oracon/lang/interpreter/: environment.h  interpreter.h  value.h
OraconLang/include/oracon/lang/lexer/: lexer.h  token.h
OraconLang/include/oracon/lang/parser/: parser.h
OraconLang/include/oracon/lang/runtime/: builtins.h
OraconLang/src/: main.cpp
OraconLang/src/ast/: ast.cpp
OraconLang/src/interpreter/: environment.cpp  interpreter.cpp  value.cpp
OraconLang/src/lexer/: lexer.cpp  token.cpp
OraconLang/src/parser/: parser.cpp
OraconLang/src/runtime/: builtins.cpp
OraconMath/: CMakeLists.txt
OraconMath/include/oracon/math/: constants.h  functions.h  math.h  matrix.h  quaternion.h  vector.h
OraconMath/tests/: test_math.cpp
build2/: CMakeCache.txt  Makefile  cmake_install.cmake
build2/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
build2/OraconAuto/: Makefile  cmake_install.cmake
build2/OraconCore/: Makefile  cmake_install.cmake
build2/OraconEngine/: Makefile  cmake_install.cmake
build2/OraconEngine/examples/: Makefile  cmake_install.cmake
build2/OraconGfx/: Makefile  cmake_install.cmake
build2/OraconGfx/examples/: Makefile  cmake_install.cmake
build2/OraconIntegrate/: Makefile  cmake_install.cmake
build2/OraconIntegrate/OraconIntegrateCore_autogen/: deps  moc_predefs.h
build2/OraconIntegrate/oracon-integrate-cli_autogen/: deps  moc_predefs.h
build2/OraconIntegrate/oracon-integrate-gui_autogen/: deps  moc_predefs.h
build2/OraconIntegrate/oracon-integrate-service_autogen/: deps
build2/OraconLang/: Makefile  cmake_install.cmake
build2/OraconMath/: Makefile  cmake_install.cmake
docs/: LANGUAGE_SPEC.md  ORACON_INTEGRATE_SPEC.md
